# focalmech-v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
c/: CMakeLists.txt
c/include/: GlobalSetting.h  GreenFunction.h  Phase.h  Record.h  Result.h  io.h  kernel.h  misfit_xcorr.h  misfits.h  types.h
c/run_test/: check_io.jl  copy_exe_here.jl  generate_db_file.jl  plot_fm.jl  run_test.jl
c/src/: GlobalSetting.cu  GreenFunction.cu  Phase.cu  Record.cu  Result.cu  fm.cu  io.cu  kernel.cu  misfit_xcorr.cu  misfits.cu  types.c
c/test/: cuda_calculation.cu  database_io.cu
include/: cpu_gpu_sync.h  io.h  types.h
julia/FocalMechv2/: Project.toml
julia/FocalMechv2/src/: FocalMechv2.jl  c_io.jl
julia/test/: test_GPU_usage.jl
run_test/: generate_db_file.jl
src/: cpu_gpu_sync.c  io.c  types.c
test/: database_io.c
